assets/css/base.css
@font-face {
  font-family: "WhyteReg";
  font-weight: 400;
  font-display: swap;
  src: url("/files/steelers/fonts/ABCWhyte-Regular.woff2") format("woff2"),
    url("/files/steelers/fonts/ABCWhyte-Regular.woff") format("woff");
}

@font-face {
  font-family: "WhyteReg";
  font-weight: 700;
  font-display: swap;
  src: url("/files/steelers/fonts/ABCWhyte-Bold.woff2") format("woff2"),
    url("/files/steelers/fonts/ABCWhyte-Bold.woff") format("woff");
}

@font-face {
  font-family: "Whyte";
  font-display: swap;
  src: url("/files/steelers/fonts/ABCWhyteInktrap-Super.woff2") format("woff2"),
    url("/files/steelers/fonts/ABCWhyteInktrap-Super.woff") format("woff");
}
@font-face {
  font-family: "WhyteItalic";
  font-style: italic;
  font-display: swap;
  src: url("/files/steelers/fonts/ABCWhyteInktrap-SuperItalic.woff2")
      format("woff2"),
    url("/files/steelers/fonts/ABCWhyteInktrap-SuperItalic.woff") format("woff");
}
@font-face {
  font-family: "GroteskBlackItalic";
  font-style: italic;
  font-display: swap;
  src: url("/files/steelers/fonts/PPRightGrotesk-SpatialBlackItalic.woff2")
      format("woff2"),
    url("/files/steelers/fonts/PPRightGrotesk-SpatialBlackItalic.woff") format("woff");
}
@font-face {
  font-family: "GroteskBlack";
  font-style: italic;
  font-display: swap;
  src: url("/files/steelers/fonts/PPRightGrotesk-WideMedium.woff2")
      format("woff2"),
    url("/files/steelers/fonts/PPRightGrotesk-WideMedium.woff") format("woff");
}

body,
html {
  @apply bg-steelwhite;
}

.btn-default {
  @apply bg-steelgreen text-white py-2 px-4 relative transition-all scale-100 inline-block uppercase shadow-none nowrap;
  letter-spacing: 0.1rem;
}

.btn-default.btn-blue {
  @apply bg-steelblue;
}

.btn-default.btn-pink {
  @apply bg-fuchsia-500 text-fuchsia-900;
}

@media (min-width: 1024px) {
  .btn-default {
    letter-spacing: 0.15rem;
  }
}
.btn-default:not(span):hover {
  @apply scale-105 shadow-lg;
}

.group:hover .btn-default {
  @apply scale-105 shadow-lg;
}

.formbody .error {
  color: darkred;
}

.btn-default::after {
  content: "";
  display: inline-block;
  background-repeat: no-repeat;
  background-size: contain;
  background-image: url("/files/steelers/layout/btn-arrow.svg");
  width: 42px;
  height: 21px;
  position: relative;
  top: 4px;
  left: 4px;
}

span.btn-default::after {
  content: "";
  display: inline-block;
  background-repeat: no-repeat;
  background-size: contain;
  background-image: none;
  width: 0px;
  height: 21px;
  position: relative;
  top: 4px;
  left: 4px;
}

.link-default::after {
  content: "";
  display: inline-block;
  background-repeat: no-repeat;
  background-size: contain;
  background-image: url("/files/steelers/layout/btn-arrow-black.svg");
  width: 42px;
  height: 21px;
  position: relative;
  top: 4px;
  left: 4px;
}

.layout--no-header #header {
  display: none;
}
.layout--no-header #container {
  padding-top: 0 !important;
}

*::selection {
  @apply bg-steelgreen text-white;
}

.link-text--video {
  @apply inline-block text-steelblue uppercase underline p-2 mt-4;
}
.link-text--big {
  @apply inline-block text-steelblue uppercase underline p-4 m-2 text-xl;
}
span.link-text--big {
  @apply no-underline;
}

h4 {
  @apply text-steelgreen font-bold text-5xl uppercase font-headline my-3 mt-28;
}

a.email {
  @apply text-black underline;
}
a.email:hover {
  @apply text-steelgreen;
}

.defaultcontainer {
  @apply max-w-screen-2xl mx-auto relative my-20 px-2 lg:px-3;
}

.defaultcontainer--small {
  @apply max-w-screen-lg mx-auto relative my-12 px-2;
}

h3.text-5xl {
  font-size: 2.625rem;
}

.player_headline h3,
#player_headline h3 {
  @apply border-b-4  border-gray-800 p-4 pl-0;
}

h4 {
  font-size: 1.625rem;
}
.prose p,
.prose li {
  font-size: 1.125rem;
  margin-top: 1.65em;
  margin-bottom: 1.65em;
}
.mt-2.text-lg.font-bold {
  font-size: 1.125rem;
}
@media (min-width: 1600px) {
  h3.text-5xl {
    font-size: 3.25rem;
  }
  h4.text-2xl {
    font-size: 1.875rem;
  }
  .prose p,
  .prose li {
    font-size: 1.375rem;
  }
  .mt-2.text-lg.font-bold {
    font-size: 1.375rem;
  }
}
@media (min-width: 1280px) {
  h3.text-5xl {
    font-size: 2.625rem;
  }
  h4 {
    font-size: 1.875rem;
  }
  .prose p,
  .prose li {
    font-size: 1.25rem;
  }
  .mt-2.text-lg.font-bold {
    font-size: 1.25rem;
  }
}

li:nth-child(0) {
  --nth-child: 0;
}

li:nth-child(1) {
  --nth-child: 1;
}

li:nth-child(2) {
  --nth-child: 2;
}

li:nth-child(3) {
  --nth-child: 3;
}

li:nth-child(4) {
  --nth-child: 4;
}

li:nth-child(5) {
  --nth-child: 5;
}

li:nth-child(6) {
  --nth-child: 6;
}

li:nth-child(7) {
  --nth-child: 7;
}

li:nth-child(8) {
  --nth-child: 8;
}

li:nth-child(9) {
  --nth-child: 9;
}

li:nth-child(10) {
  --nth-child: 10;
}

li:nth-child(11) {
  --nth-child: 11;
}

li:nth-child(12) {
  --nth-child: 12;
}

li:nth-child(13) {
  --nth-child: 13;
}

li:nth-child(14) {
  --nth-child: 14;
}

li:nth-child(15) {
  --nth-child: 15;
}

li:nth-child(16) {
  --nth-child: 16;
}

li:nth-child(17) {
  --nth-child: 17;
}

li:nth-child(18) {
  --nth-child: 18;
}

li:nth-child(19) {
  --nth-child: 19;
}

li:nth-child(20) {
  --nth-child: 20;
}

li:nth-child(21) {
  --nth-child: 21;
}

li:nth-child(22) {
  --nth-child: 22;
}

li:nth-child(23) {
  --nth-child: 23;
}

li:nth-child(24) {
  --nth-child: 24;
}

li:nth-child(25) {
  --nth-child: 25;
}

li:nth-child(26) {
  --nth-child: 26;
}

li:nth-child(27) {
  --nth-child: 27;
}

li:nth-child(28) {
  --nth-child: 28;
}

li:nth-child(29) {
  --nth-child: 29;
}

li:nth-child(30) {
  --nth-child: 30;
}

